@@ -1,6 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.644 2006/04/17 01:56:01 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.645 2006/04/19 15:16:30 agaffney Exp $
+
+  19 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIArchitectureTemplate.py:
+  automatically emerge splashutils and splash-themes-livecd if kernel_bootsplash
+  and livecd-kernel
 
   16 Apr 2006; Preston Cody <codeman@gentoo.org>
   src/GLIGenDialog.py:
